# adventofcode-2024

./: README.md  pyproject.toml
adventofcode_2024/: day_01.py  day_01.sql  day_02.py  day_02.sql  day_03.sql  day_03_regex.txt  day_04.py  initday.py  test_day_01.py  test_day_02.py  test_day_04.py
tests/: test_day_02.py
